# advent-of-code

./: .gitignore
2024/rust/: Cargo.toml  benchmarks.txt  day-01.bench.txt  justfile
2024/rust/day-01/src/: part1.rs  part2.rs
2024/rust/day-02/src/: part1.rs  part2.rs
2024/rust/day-03/src/: part1.rs  part2.rs
2024/rust/scripts/: get-aoc-input-code.rs  get-aoc-input.sh
