[workspace]
resolver = "2"

members = ["day-*"]
default-members = ["day-*"]

[workspace.dependencies]
glam = "0.29"
itertools = "0.13"
nom = "7.1"
rayon = "1.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
rstest = "0.23"
rstest_reuse = "0.7"
divan = "0.1"
miette = { version = "7.4", features = ["fancy"] }
nom_locate = "4.2"
nom-supreme = "0.8"
test-log = { version = "0.2", default-features = false, features = ["trace"] }
thiserror = "2"


[profile.dev]
codegen-units = 64
incremental = true
lto = "off"
opt-level = 1
debug = "full"

[profile.release]
codegen-units = 1
incremental = true
lto = "fat"
opt-level = 3
debug = "none"

[profile.bench]
codegen-units = 1
incremental = true
lto = "fat"
opt-level = 3
debug = "none"
